--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,8 +1,8 @@
 status = info
 name = ServicesConfig
 
-property.serviceName = mail-service
-property.rootDir = /opt/kryptnostic
+property.serviceName = courier
+property.rootDir = /opt/dataloom
 property.runningDir = ${rootDir}/deploy
 property.rollingDir = ${rootDir}/logging
 
