--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -18,12 +18,15 @@
 #
 
 status = info
-name = ServicesConfig
+name = CourierConfig
 
 property.serviceName = courier
-property.rootDir = /opt/dataloom
-property.runningDir = ${rootDir}/deploy
+property.rootDir = .
+property.runningDir = ${rootDir}/logging
 property.rollingDir = ${rootDir}/logging
+
+#filter.threshold.type = ThresholdFilter
+#filter.threshold.level = debug
 
 appenders = console, rolling
 
@@ -31,7 +34,7 @@ appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{ISO8601} %p [%t] %c - %m%n
- 
+
 appender.rolling.type = RollingFile
 appender.rolling.name = RollingFile
 appender.rolling.fileName = ${runningDir}/${serviceName}.log
@@ -40,19 +43,24 @@ appender.rolling.layout.type = PatternLayout
 appender.rolling.layout.pattern = %d{ISO8601} %p [%t] %c - %m%n
 appender.rolling.policies.type = Policies
 appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
-appender.rolling.policies.time.interval = 2
+appender.rolling.policies.time.interval = 86400
 appender.rolling.policies.time.modulate = true
 appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
 appender.rolling.policies.size.size=20GB
 
-loggers = rolling
- 
-logger.rolling.name = org.apache.logging.log4j.core.appender.rolling
-logger.rolling.level = debug
-logger.rolling.additivity = false
-logger.rolling.appenderRefs = rolling
-logger.rolling.appenderRef.rolling.ref = RollingFile
- 
+#appender.list.type = List
+#appender.list.name = List
+#appender.list.filter.threshold.type = ThresholdFilter
+#appender.list.filter.threshold.level = info
+
+#logger.example.name = com.example
+#logger.example.level = debug
+#logger.example.additivity = true
+#logger.example.appendRefs = rolling
+#logger.example.appenderRef.rolling.ref = RollingFile
+
 rootLogger.level = info
-rootLogger.appenderRefs = stdout
+rootLogger.appenderRefs = console, rolling
 rootLogger.appenderRef.stdout.ref = STDOUT
+rootLogger.appenderRef.rolling.ref = RollingFile
+
