--- a/build.gradle
+++ b/build.gradle
@@ -32,11 +32,11 @@ ext.scmUrl = 'scm:git:https://github.com/dataloom/courier.git'
 ext.connectionUrl = 'scm:git:https://github.com/dataloom/courier.git'
 ext.developerConnectionUrl = 'scm:git:https://github.com/dataloom/courier.git'
 
-apply from: "https://raw.githubusercontent.com/kryptnostic/gradles/master/kryptnostic.gradle"
+apply from: "https://raw.githubusercontent.com/openlattice/gradles/master/openlattice.gradle"
 
 sourceCompatibility=JavaVersion.VERSION_1_8
 
-dependencies { 
+dependencies {
     compile "com.fasterxml.jackson.dataformat:jackson-dataformat-csv:${jackson_version}"
     compile 'com.esotericsoftware:kryo-shaded:4.0.0'
     compile 'com.esotericsoftware:minlog:1.3.0'
@@ -59,9 +59,10 @@ dependencies {
     } else {
         logger.quiet(project.name + " using jar dependencies.")
         compile "com.kryptnostic:scribe:${scribe_version}"
-        compile "com.kryptnostic:rhizome:${rhizome_version}"
-        testCompile "com.kryptnostic:rhizome:${rhizome_version}:tests"
-        testCompile "com.kryptnostic:rhizome-client:${rhizome_client_version}:tests"
+        compile "com.openlattice:rhizome:${rhizome_version}"
+
+        testCompile "com.openlattice:rhizome:${rhizome_version}:tests"
+        testCompile "com.openlattice:rhizome-client:${rhizome_client_version}:tests"
     }
 
     /*
@@ -72,7 +73,7 @@ dependencies {
         exclude module : 'hamcrest'
         exclude module : 'hamcrest-core'
     }
-    
+
     /*
      * GreenMail
      * http://www.icegreen.com/greenmail/
@@ -82,7 +83,7 @@ dependencies {
      * testing sending/receiving emails against a running mail server.
      */
     testCompile "com.icegreen:greenmail:1.4.1"
-    
+
     testCompile( "org.mockito:mockito-all:${mockito_version}" ) {
         exclude module : 'hamcrest'
         exclude module : 'hamcrest-core'
