--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ plugins {
     id "eclipse"
     id "idea"
     id "jacoco"
-    id 'com.github.spotbugs' version '3.0.0'
+    id 'com.github.spotbugs' version '4.5.1'
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
     id 'org.jetbrains.kotlin.plugin.spring' version '1.3.61'
 }
@@ -53,7 +53,7 @@ jacoco {
 }
 
 
-tasks.withType(com.github.spotbugs.SpotBugsTask) {
+spotbugsMain {
     reports {
         xml.enabled = false
         html.enabled = true
